--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -21,13 +21,6 @@
   background-position: center;
 }
 
-.h2 {
-  font-size: 40px;
-}
-.container p {
-  font-size: 20px;
-}
-
 .four_zero_four_bg h1 {
   font-size: 80px;
 }
@@ -42,7 +35,6 @@
   background: #39ac31;
   margin: 20px 0;
   display: inline-block;
-  cursor: pointer;
 }
 .contant_box_404 {
   margin-top: -50px;
@@ -478,7 +470,6 @@ header {
 
 .main-join-card-two h1 {
   font-size: 28px;
-  padding-bottom: 30px;
 }
 
 .main-join-card-two p {
@@ -496,7 +487,7 @@ header {
   text-align: center;
   display: flex;
   justify-content: space-evenly;
-  padding: 10px 65px 30px 65px;
+  padding: 10px 65px;
 }
 .main-join-container-div-icons i {
   font-size: 30px;
@@ -1046,10 +1037,6 @@ header {
   color: rgb(0, 0, 0);
   margin-bottom: 50px;
 }
-.main-rh-second-section-title,
-.main-rh-third-secton-title {
-  padding-top: 30px;
-}
 
 .main-rh-section-container,
 .main-rh-second-section-container,
@@ -1411,8 +1398,8 @@ header {
 }
 
 .main-contact-us-section-div-btn {
-  bottom: 180px;
-  left: 280px;
+  bottom: 30px;
+  left: 185px;
 }
 
 /* Footer */
@@ -1866,6 +1853,11 @@ header {
   .counter-h2 {
     font-size: 2rem;
     padding: 0 25px;
+  }
+
+  /* Join Page */
+  .main-join-container-div-btn {
+    left: 25%;
   }
 
   /* Sign-in Page */
