--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -11,7 +11,8 @@
                 <h1>Unlimited Destinations</h1>
                 <h2>for Mind, Body and Soul</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, eum? Officiis earum recusandae nesciunt ipsum!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex amet molestiae ipsum dolor doloribus
+                    perspiciatis sed magnam voluptatibus minima reiciendis!
                 </p>
             </div>
         </div>
@@ -20,9 +21,12 @@
             <div class="numbertext">2 / 3</div>
             <img src="./images/inside-pool.jpg" style="width:100%">
             <div class="fade-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, veritatis voluptatem dolorem,<br> voluptatum
-                ratione non repellat fuga ipsam perspiciatis quibusdam expedita <br> unde provident quam ipsum sit aperiam
-                ipsa accusamus! Iure.
+                <h1>Unlimited Destinations</h1>
+                <h2>for Mind, Body and Soul</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex amet molestiae ipsum dolor doloribus
+                    perspiciatis sed magnam voluptatibus minima reiciendis!
+                </p>
             </div>
         </div>
 
@@ -32,9 +36,12 @@
             <div class="numbertext">3 / 3</div>
             <img src="./images/francissco-pool-hotel.jpg" style="width:100%">
             <div class="fade-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, veritatis voluptatem dolorem,<br> voluptatum
-                ratione non repellat fuga ipsam perspiciatis quibusdam expedita <br> unde provident quam ipsum sit aperiam
-                ipsa accusamus! Iure.
+                <h1>Unlimited Destinations</h1>
+                <h2>for Mind, Body and Soul</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex amet molestiae ipsum dolor doloribus
+                    perspiciatis sed magnam voluptatibus minima reiciendis!
+                </p>
             </div>
         </div>
 
@@ -64,7 +71,9 @@
                 pariatur ab possimus nihil ducimus, asperiores voluptates autem perferendis
                 ipsam!
             </p>
-            <button type="submit" class="main-home-section-article-btn">Learn more</button>
+
+            <button type="submit" class="main-home-section-article-btn"><a style="text-decoration:none"
+                    href="/about">Learn more</a></button>
         </article>
         <article class="main-home-section-article section-article-two">
 
@@ -77,7 +86,7 @@
                 <div class="main-home-section-article-div-icons">
                     <i class="fa-regular fa-star"></i>
                     <h1>Convenient Location</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, dolores?</p>
+                    <p>RoyalVillas is located within a 5-minute walk to a local beach.</p>
                 </div>
             </div>
 
@@ -96,16 +105,16 @@
 
         </article>
     </section>
-    <h2 class="subheading">Top Accommodation</h2>
+    <h2 class="subheading">Top Accommodations</h2>
     <ul class="responsive-tabs-container-catalogHome">
         <li class="responsive-tab-catalogHome">
-            <button class="responsive-tab-button">Popular Accommodation</button>
+            <button id="oldest-btn" class="responsive-tab-button">Popular Accommodations</button>
         </li>
         <li class="responsive-tab-catalogHome">
-            <button class="responsive-tab-button">Most Liked Accommodation</button>
+            <button class="responsive-tab-button">Most Liked Accommodations</button>
         </li>
         <li class="responsive-tab-catalogHome">
-            <button class="responsive-tab-button">Newest Accommodation</button>
+            <button id="newest-btn" class="responsive-tab-button">Newest Accommodations</button>
         </li>
     </ul>
 
